# ble-scanner-dashboard

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  app.py  config.py  container_mode.py  create_db.py  device_classifier.py  docker-compose.yml  external_api.py  feature_proposals.md  flask_app.py  mqtt_client.py  notifications.py  proposals.md  pyproject.toml  realtime_handler.py  requirements.txt  scan_bluetooth.ps1  setup.sh  sniff_my_ble.py  test_and_package.sh  test_ble_scanner.py  test_notifications.py  test_suite.py  vendor_lookup.py  vendor_prefixes.json  vendor_prefixes.py  web_app.py
.github/workflows/: ci.yml
active/: __init__.py  hid_replay.py
alembic/: env.py
alembic/versions/: 0001_init.py
api/: __main__.py  app.py  routes.py  websocket.py
ble_scanner/: __init__.py
ble_scanner/decoder/: __init__.py  pipeline.py
ble_scanner/plugins/: __init__.py  bluez.py  btlejack.py  nrf.py  ubertooth.py
cli/: main.py
core/: __init__.py  aggregator.py  db.py  exporter.py  graph.py  models.py  scanner.py  utils.py
migrations/: env.py  script.py.mako
plugins/: __init__.py  logger_plugin.py
qt_frontend/: __main__.py  main_window.py
scripts/: bootstrap.sh  build.sh  install_test_deps.sh
sqlmodel/: __init__.py
templates/: 500.html  dashboard.html
tests/: test_aggregator.py  test_ble_scanner.py  test_cli.py  test_db.py  test_decoder_pipeline.py  test_exporter.py  test_external_api.py  test_flask_app.py  test_graph.py  test_hid_replay.py  test_notifications.py  test_plugins.py  test_scanner_sim.py  test_vendor_lookup.py
(+2 files in other folders)
